--- a/foundations/04-chaining-selectors/index.html
+++ b/foundations/04-chaining-selectors/index.html
@@ -11,13 +11,13 @@
     <!-- Check image source path. Review Foundations lesson - Links and Images -->
     <!-- Use the classes BELOW this line -->
     <div>
-      <img class="avatar proportioned" src="./images/pexels-katho-mutodo-8434791.jpg" alt="Woman with glasses">
+      <img class="avatar proportioned" src="./images/Immagine 2024-06-20 135004.png" alt="Woman with glasses">
       <img class="avatar distorted" src="./images/pexels-andrea-piacquadio-3777931.jpg" alt="Man with surprised expression">
     </div>
     <!-- Use the classes ABOVE this line -->
     <div>
-      <img class="original proportioned" src="./images/pexels-katho-mutodo-8434791.jpg" alt="Woman with glasses">
-      <img class="original distorted" src="./images/pexels-andrea-piacquadio-3777931.jpg" alt="Man with surprised expression">
+      <img class="original proportioned" src="./images/Immagine 2024-06-20 135004.png" alt="Woman with glasses" width="400px" height="350px">
+      <img class="original distorted" src="./images/pexels-andrea-piacquadio-3777931.jpg" alt="Man with surprised expression" width="400px" height="350px">
     </div>
   </body>
 </html>
